test/e2e/failing/tail_errors_limit.expected
Testing tail_errors_limit.
This run has ID `<uuid>`.
 ...                failing          0   test.[ERROR]             failing          0   test.
-- failing.000 [test.] Failed --
in `<build-context>/_build/_tests/<uuid>/failing.000.output`:
... (omitting 91 lines)
output line 92
output line 93
output line 94
output line 95
output line 96
output line 97
output line 98
output line 99
output line 100
Test error: Error Logs above should be 10 lines long (omitting 91)..

The full test results are available in `<build-context>/_build/_tests/<uuid>`.
1 error! in <test-duration>s. 1 test run.
ASSERT Logs above should be 10 lines long (omitting 91).
